# StarChat

./: .gitignore  CHANGELOG.md  README.md
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml  build.rs  build_proto.rs
server/proto/: replication.proto
server/src/: .#main.rs  client_connection_manager.rs  main.c  main.rs  models.rs  server_connection_manager.rs
