[package]
name = "server"
version = "0.0.2"
edition = "2024"

[dependencies]
prost = "0.14.4"
redis = { version = "1.3.0", features = ["tokio-comp", "aio", "connection-manager"] }
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["trace", "cors"] }
tonic = { version = "0.11", features = ["tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.4", features = ["v4", "serde"] }
chrono = { version = "0.4.45", features = ["serde"] }
futures = "0.3.32"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
config = "0.15.25"
dotenvy = "0.15.7"
anyhow = "1.0.103"
thiserror = "2.0.18"
axum = { version = "0.8.9", features = ["ws"] }
tonic-prost = "0.14.6"

[build-dependencies]
tonic-build = "0.14.6"
tonic-prost-build = "0.14.6"
